[package]
name = "dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
rand = "0.9.0-alpha.1"
crossbeam = "0.8.4"
dashmap = "5.5.3"
rustc-hash = "1.1.0"
env_logger = "0.11.3"
log = "0.4.21"
